--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Install dependencies
       run: |
           sudo apt update
-          sudo apt install qt6-tools-dev
+          sudo apt install qt6-tools-dev qt6-base-dev libglx-dev libgl1-mesa-dev
 
     - name: Configure CMake
       run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
