Support build with either Qt5 or Qt6
Allow to build with either Qt5 or Qt6 whereas Qt6 is the default
version.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,8 @@ set(CMAKE_AUTOUIC ON)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-find_package(Qt6 COMPONENTS Core Widgets Network REQUIRED)
+set(CALFENSTER_QTVERSION "6" CACHE STRING "Which Qt version to use. 6|5")
+find_package(Qt${CALFENSTER_QTVERSION} COMPONENTS Core Widgets Network REQUIRED)
 
 add_executable(calfenster
 src/configuration.cpp
@@ -18,4 +19,5 @@ src/main.cpp)
 
 target_compile_options(calfenster PRIVATE -Wall -Wextra -pedantic)
 target_include_directories(calfenster PRIVATE ${CMAKE_SOURCE_DIR}/include)
-target_link_libraries(calfenster PRIVATE Qt6::Core Qt6::Widgets Qt6::Network)
+target_link_libraries(calfenster PRIVATE Qt${CALFENSTER_QTVERSION}::Core
+  Qt${CALFENSTER_QTVERSION}::Widgets Qt${CALFENSTER_QTVERSION}::Network)
