--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,14 @@ env:
 
 jobs:
   build:
+    strategy:
+      fail-fast: false
+      matrix:
+        qt:
+          - version: 5
+            packages: qtbase5-dev qtbase5-dev-tools
+          - version: 6
+            packages: qt6-tools-dev qt6-base-dev libglx-dev libgl1-mesa-dev
     runs-on: ubuntu-latest
 
     steps:
@@ -19,10 +27,10 @@ jobs:
     - name: Install dependencies
       run: |
           sudo apt update
-          sudo apt install qt6-tools-dev qt6-base-dev libglx-dev libgl1-mesa-dev
+          sudo apt install ${{matrix.qt.packages}}
 
     - name: Configure CMake
-      run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
+      run: cmake -B ${{github.workspace}}/build -DCALFENSTER_QTVERSION=${{matrix.qt.version}} -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
 
     - name: Build
       run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
