Add displaying of Clocks
Clocks for time zones can be added to the configuration and displayed as
text below the calendar widget.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,7 @@ add_executable(calfenster
 src/configuration.cpp
 src/event_filter.cpp
 src/app_server.cpp
+src/clock_nanny.cpp
 src/main.cpp)
 
 target_compile_options(calfenster PRIVATE -Wall -Wextra -pedantic)
